event-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-processor
  labels:
    app: event-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-processor
  template:
    metadata:
      labels:
        app: event-processor
    spec:
      containers:
        - name: event-processor
          image: sinedon/event-processor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: event-processor
spec:
  selector:
    app: event-processor
  ports:
    - port: 80
      targetPort: 8080
