progress-access-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progress-access
  labels:
    app: progress-access
spec:
  replicas: 1
  selector:
    matchLabels:
      app: progress-access
  template:
    metadata:
      labels:
        app: progress-access
    spec:
      containers:
        - name: progress-access
          image: sinedon/progress-access:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: progress-access
spec:
  selector:
    app: progress-access
  ports:
    - port: 80
      targetPort: 8080
