edge-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # UI
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80

          # API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
