ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80

          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80

          - path: /login
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80

          - path: /logout
            pathType: Exact
            backend:
              service:
                name: edge-service
                port:
                  number: 80

          - path: /topics
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80

          - path: /progress
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
